--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+.brand-btn {
+  background-color: #9c9ead;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  padding: 10px 30px;
+}
+
 .App {
   text-align: center;
 }
